--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
         </div>
     </div>
 
-    <div class="contact">
+    <footer>
         <h2>Contact</h2>
         <ul>
             <li>Mail：xxxd@hexschool.com</li>
             <li>Phone Number：0910123456</li>
         </ul>
-    </div>
+    </footer>
 
 </body>
 
